Minor spacing fix for actions dropdown

--- a/src/css/joomla-generic.css
+++ b/src/css/joomla-generic.css
@@ -6764,6 +6764,9 @@ dl.article-info {
     margin-right: 15px;
     margin-bottom: .2rem; }
 
+.icons-actions {
+  margin-bottom: 0.7rem; }
+
 .page-header {
   padding-bottom: 0.5rem;
   margin: 1.5rem 0 2rem;
